UI part. Spreads handling.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
         <tr>
             <th rowspan="2" class="column-ticker">Ticker</th>
             <th colspan="6">USDT</th>
-            <th rowspan="2" class="column-spreads">Spreads</th>
+            <th rowspan="2" class="column-spreads">Best spreads</th>
         </tr>
         <tr>
             <th class="column-price">Kucoin</th>
@@ -30,7 +30,7 @@
 
 </body>
 <script src="index.js"></script>
-<script type = "text/JavaScript" src = "https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js">
+<script type="text/JavaScript" src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js">
 </script>
 </html>
 
