Webscoket communication with frontend. WIP commit.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,17 +10,8 @@
     <table class="styled-table" id="price-table">
         <thead>
         <tr>
-            <th rowspan="2" class="column-ticker">Ticker</th>
-            <th colspan="6">USDT</th>
-            <th rowspan="2" class="column-spreads">Best spreads</th>
-        </tr>
-        <tr>
-            <th class="column-price">Kucoin</th>
-            <th class="column-price">Bybit</th>
-            <th class="column-price">Mexc</th>
-            <th class="column-price">Binance</th>
-            <th class="column-price">Gate</th>
-            <th class="column-price">Huobi</th>
+            <th class="column-ticker">Ticker</th>
+            <th class="column-spreads">Best spreads</th>
         </tr>
         </thead>
         <tbody>
