Backend implementation of requesting prices of specified ticker. WIP commit.

--- a/src/main/resources/static/prices.html
+++ b/src/main/resources/static/prices.html
@@ -10,8 +10,17 @@
     <table class="styled-table" id="price-table">
         <thead>
         <tr>
-            <th class="column-ticker">Ticker</th>
-            <th class="column-spreads">Best spreads</th>
+            <th rowspan="2" class="column-ticker">Ticker</th>
+            <th colspan="6">USDT</th>
+            <th rowspan="2" class="column-spreads">Best spreads</th>
+        </tr>
+        <tr>
+            <th class="column-price">Kucoin</th>
+            <th class="column-price">Bybit</th>
+            <th class="column-price">Mexc</th>
+            <th class="column-price">Binance</th>
+            <th class="column-price">Gate</th>
+            <th class="column-price">Huobi</th>
         </tr>
         </thead>
         <tbody>
