Frontend minor fixes.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div class="content">
-    <div class="placeholder"></div>
-    <div class="table-container">
+    <div class="flux-left"></div>
+    <div class="flux-center">
         <table class="styled-table" id="price-table">
             <thead>
             <tr>
@@ -23,7 +23,7 @@
 <!--    TODO: make correct positioning-->
 <!--    TODO: make clickable spreads-->
 <!--    TODO: freeze columns-->
-    <div class="ticker-spread-info">
+    <div class="flux-right">
         <div style="margin: 25px 0" class="ticker-spread-info-details">
             <p style="margin-top: 0" class="spread-ticker">
                 <!--    TODO: make USDT prefix-->
