--- a/src/main/resources/static/prices.html
+++ b/src/main/resources/static/prices.html
@@ -6,7 +6,7 @@
     <title>Test</title>
 </head>
 <body>
-<div class="table-container">
+<div class="flux-center">
     <table class="styled-table" id="price-table">
         <thead>
         <tr>
