Local cache refactoring.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -48,13 +48,13 @@
                     <td class="vertical-header">Buy</td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <td class="availability-table"></td>
                 </tr>
                 <tr>
                     <td class="vertical-header">Sell</td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <td class="availability-table"></td>
                 </tr>
                 </tbody>
             </table>
